feat: crud stup